synchronized介绍-20210704-5